# ptychite

./: .build.yml  .clang-format  .gitignore  LICENSE  README.md  meson.build  ptycfg  ptycfg.sh  sample_config.json
protocols/: ptychite-message-unstable-v1.xml
src/ptychite/: action.c  action.h  applications.c  applications.h  buffer.c  buffer.h  chord.c  chord.h  compositor.c  compositor.h  config.c  config.h  dbus.c  dbus.h  draw.c  draw.h  element.h  icon.c  icon.h  json.c  json.h  keyboard.c  keyboard.h  macros.h  message.c  message.h  monitor.c  monitor.h  notification.c  notification.h  ptychite.c  server.c  server.h  util.c  util.h  view.c  view.h  windows.c  windows.h
src/ptychite/dbus/: network_manager.c  ptychite.c  upower.c  xdg_notification.c
src/ptychite/windows/: control.c  notification.c  panel.c  switcher.c  titlebar.c  wallpaper.c  windows.c  windows.h
src/ptymsg/: ptymsg.c
subprojects/: scenefx.wrap  wlroots.wrap
